--- a/package.json
+++ b/package.json
@@ -9,31 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.45.0",
     "@supabase/ssr": "^0.5.0",
-    "openai": "^4.56.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "clsx": "^2.1.1",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
-    "sql.js": "^1.10.0",
+    "lucide-react": "^0.441.0",
+    "next": "^14.2.0",
+    "officeparser": "^4.1.1",
+    "openai": "^4.56.0",
     "papaparse": "^5.4.1",
     "pdf-parse": "^1.1.1",
-    "officeparser": "^4.1.1",
-    "lucide-react": "^0.441.0",
-    "clsx": "^2.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sql.js": "^1.10.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/papaparse": "^5.3.14",
-    "typescript": "^5.4.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0"
   }
 }
